--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,17 +2,16 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "build project",
             "type": "shell",
-            "command": "make",
-            "args": [
-                "debug"  // or "release" depending on what you want to build
-            ],
+            "command": "make clean && make",
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "problemMatcher": ["$gcc"],
+            "problemMatcher": [
+                "$gcc"
+            ],
             "detail": "Generated task for building the project"
         }
     ]
