--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,37 @@
             "cwd": "${workspaceFolder}",
             "environment": [
                 // {
+                //     "name": "LD_DEBUG",
+                //     "value": "all"
+                // }
+            ],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "build project",
+            "miDebuggerPath": "/usr/bin/gdb",
+            "sourceFileMap": {
+                ".": "/usr/src/glibc/glibc-2.35",
+                "./dlfcn/": "/usr/src/glibc/glibc-2.35",
+                "./elf/": "/usr/src/glibc/glibc-2.35"
+            }
+        },
+        {
+            "name": "profiler debug",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/profiler_exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [
+                // {
                 //     // "name": "LD_DEBUG",
                 //     // "value": "all"
                 // }
@@ -27,7 +58,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "build project",
+            "preLaunchTask": "build for profiling",
             "miDebuggerPath": "/usr/bin/gdb",
             "sourceFileMap": {
                 ".": "/usr/src/glibc/glibc-2.35",
