--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "build project",
             "type": "shell",
-            "command": "make clean && make",
+            "command": "make clean && make debug",
             "group": {
                 "kind": "build",
                 "isDefault": true
