--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "sstream": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "cerrno": "cpp"
+        "cerrno": "cpp",
+        "iomanip": "cpp"
     }
 }
