--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "g++ debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/debug/VulkanTest",
+            "program": "${workspaceFolder}/build/debug/vulkan_gui",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -49,7 +49,7 @@
             "name": "profiler debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/profiler/profiler_exe",
+            "program": "${workspaceFolder}/build/profiling/vulkan_gui",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
