--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "build project",
             "type": "shell",
-            "command": "make clean && make debug",
+            "command": "./build.sh",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -17,7 +17,7 @@
         {
             "label": "build for profiling",
             "type": "shell",
-            "command": "make profiler",
+            "command": "./profile_build.sh",
             "group": {
                 "kind": "build",
                 "isDefault": true
