port to windows using vs cl

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,10 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "cerrno": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "xmemory": "cpp",
+        "xstring": "cpp",
+        "xtr1common": "cpp",
+        "xutility": "cpp"
     }
 }
