--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Debug Vulkan GUI",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}\\build\\debug\\vulkan_gui.exe",
+            "program": "${workspaceFolder}\\msc\\build\\debug\\vulkan_gui.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
