--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -48,6 +48,28 @@
                 },"cwd": "${workspaceFolder}"
             },
             "detail": "build and debug with raddebugger"
+        },
+        {
+            "label": "MSC build",
+            "type": "shell",
+            "windows": {
+                "command": ".\\build.bat",
+
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "options": {
+                "shell": {
+                    "executable": "C:\\Windows\\System32\\cmd.exe",
+                    "args": [
+                        "/c",
+                        "\"C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat\" &&"
+                    ]
+                },"cwd": "${workspaceFolder}"
+            },
+            "detail": "build MSC"
         }
     ]
 }
