--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,9 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "charconv": "cpp",
+        "xlocale": "cpp",
+        "format": "cpp"
     }
 }
